--- a/primevue-nuxt-3/package.json
+++ b/primevue-nuxt-3/package.json
@@ -10,11 +10,14 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxtjs/tailwindcss": "^6.12.2",
     "@primevue/nuxt-module": "^4.1.1",
     "@primevue/themes": "^4.1.1",
+    "axios": "^1.7.7",
     "nuxt": "^3.13.0",
     "primeicons": "^7.0.0",
     "primevue": "^4.1.1",
-    "sass": "~1.32.13"
+    "sass": "~1.32.13",
+    "tailwindcss-primeui": "^0.3.4"
   }
 }
